--- a/AgentSystemClient/WebContent/app/index.html
+++ b/AgentSystemClient/WebContent/app/index.html
@@ -9,6 +9,7 @@
 <script src="/AgentSystemClient/app/lib/angular-websocket.js"></script>
 <script src="/AgentSystemClient/app/lib/ui-bootstrap-tpls-1.3.1.js"></script>
 <script src="/AgentSystemClient/app/lib/angular-cookies.js"></script>
+<script src="/AgentSystemClient/app/lib/bootbox.min.js"></script>
 <script src="app/lib/angular-route.js"></script>
 
 <script src="/AgentSystemClient/app/app.js"></script>
