jms client side working

--- a/AgentSystemClient/WebContent/app/index.html
+++ b/AgentSystemClient/WebContent/app/index.html
@@ -15,6 +15,7 @@
 <script src="/AgentSystemClient/app/controller/agent.controller.js"></script>
 <script src="/AgentSystemClient/app/controller/cluster.controller.js"></script>
 <script src="/AgentSystemClient/app/controller/agentModal.controller.js"></script>
+<script src="/AgentSystemClient/app/controller/aclModal.controller.js"></script>
 
 
 </head>
