--- a/AgentSystemClient/WebContent/app/index.html
+++ b/AgentSystemClient/WebContent/app/index.html
@@ -14,6 +14,7 @@
 <script src="/AgentSystemClient/app/app.js"></script>
 <script src="/AgentSystemClient/app/controller/agent.controller.js"></script>
 <script src="/AgentSystemClient/app/controller/cluster.controller.js"></script>
+<script src="/AgentSystemClient/app/controller/promo.controller.js"></script>
 <script src="/AgentSystemClient/app/controller/agentModal.controller.js"></script>
 <script src="/AgentSystemClient/app/controller/aclModal.controller.js"></script>
 
